<resources>
    <string name="app_name">ScanClothes</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>

    <string name="navigation_drawer_close">Open navigation drawer</string>

    <string name="desarrollador">Desarrollado por: Aldo Morales y Samuel Contreras</string>


    <!--MENU ADMINISTRADOR-->
    <string name="InicioAdmin">Inicio</string>
    <string name="PerfilAdmin">Perfil</string>
    <string name="InventarioAdmin">Inventario</string>
    <string name="FotogrametríaAdmin">Crear Modelo 3D</string>
    <string name="CerrarSesion">Cerrar Sesión</string>

    <!--MENU CLIENTE-->
    <string name="Opcionestxt">Opciones</string>
    <string name="InicioCliente">Inicio</string>
    <string name="IngresarRegistrar">Ingresar/Registrarte</string>
    <string name="EscanerCliente">Escáner</string>
    <string name="CategoriasCliente">Categorias</string>
    <string name="SalirCliente">Salir</string>
    <string name="IngresarCliente">Ingresar</string>
    <string name="RegistrarCliente">Registrarse</string>

    <!--REGISTRO DE ADMINISTRADOR-->
    <string name="RegistroTXT">Registro de administrador</string>
    <string name="Correo">Correo Electrónico</string>
    <string name="Password">Contraseña</string>
    <string name="Nombre">Nombres completos</string>
    <string name="Apellidos">Apellidos completos</string>
    <string name="Edad">Edad</string>
    <string name="FechaRegistro">Fecha de registro</string>
    <string name="Registrar">registrar</string>

    <!--LOGIN DE ADMINISTRADORES-->
    <string name="LoginTXT">Inicia sesión</string>
    <string name="Ingresar">Ingresar</string>
    <string name="OlvidasteTuContraseña">¿Olvidaste tu contraseña?</string>

    <!--LOGIN DE ADMINISTRADORES-->
    <string name="fechaAdmin"> -- </string>
    <string name="BienvenidoTXT"> -- </string>
    <string name="NombreTXT"> -- </string>

    <!--RECUPERAR CONTRASEÑA-->
    <string name="RecuperarContraseñaTXT">Recupera Tú Contraseña</string>
    <string name="Recuperar">Recuperar</string>

    <!--CATEGORIAS-->
    <string name="Eligeunacategoriatxt">Elige una categoría</string>
    <string name="Invierno">INVIERNO</string>
    <string name="Otoño">OTOÑO</string>
    <string name="Verano">VERANO</string>
    <string name="Primavera">PRIMAVERA</string>

    <!--MENU AGREGAR-->
    <string name="Agregar">Agregar</string>
    <string name="Vista">Vista</string>

    <!--AGREGAR PRENDA DE INVIERNO-->
    <string name="idInvierno"> -- </string>
    <string name="NombreTXTInvierno">Nombre de la prenda</string>
    <string name="NombreInvierno">Escribe aquí el nombre</string>
    <string name="VistaInvierno">0</string>
    <string name="AgregarPrendaInv">Agregar Prenda</string>
    <string name="DescripcionPrendaInv">Agregar Descripcion</string>
    <string name="LinkDePrendaInv">Agrega el enlace de la prenda</string>
    <string name="LinkDeModelo3DInv">Agrega el enlace de tu Modelo 3D</string>

    <!--ITEM DE AGREGAR PRENDA DE INVIERNO-->
    <string name="NombreImagenInviernoItem"> -- </string>
    <string name="VistaInviernoItem"> -- </string>
    <string name="DescripcionInviernoItem"> -- </string>

    <!--AGREGAR PRENDA DE OTOÑO-->
    <string name="idOtono"> -- </string>
    <string name="NombreTXTOtoño">Nombre de la prenda</string>
    <string name="NombreOtoño">Escribe aquí el nombre</string>
    <string name="VistaOtoño">0</string>
    <string name="AgregarPrendaOto">Agregar Prenda</string>
    <string name="DescripcionPrendaOto">Agregar Descripcion</string>
    <string name="LinkDePrendaOto">Agrega el enlace de la prenda</string>

    <!--ITEM DE AGREGAR PRENDA DE INVIERNO-->
    <string name="NombreImagenOtoñoItem"> -- </string>
    <string name="VistaOtoñoItem"> -- </string>
    <string name="DescripcionOtoñoItem"> -- </string>

    <!--AGREGAR PRENDA DE PRIMAVERA-->
    <string name="idPrimavera"> -- </string>
    <string name="NombreTXTPrimavera">Nombre de la prenda</string>
    <string name="NombrePrimavera">Escribe aquí el nombre</string>
    <string name="VistaPrimavera">0</string>
    <string name="AgregarPrendaPri">Agregar Prenda</string>
    <string name="DescripcionPrendaPri">Agregar Descripcion</string>
    <string name="LinkDePrendaPri">Agrega el enlace de la prenda</string>

    <!--ITEM DE AGREGAR PRENDA DE PRIMAVERA-->
    <string name="NombreImagenPrimaveraItem"> -- </string>
    <string name="VistaPrimaveraItem"> -- </string>
    <string name="DescripcionPrimaveraItem"> -- </string>

    <!--AGREGAR PRENDA DE VERANO-->
    <string name="idVerano"> -- </string>
    <string name="NombreTXTVerano">Nombre de la prenda</string>
    <string name="NombreVerano">Escribe aquí el nombre</string>
    <string name="VistaVerano">0</string>
    <string name="AgregarPrendaVer">Agregar Prenda</string>
    <string name="DescripcionPrendaVer">Agregar Descripcion</string>
    <string name="LinkDePrendaVer">Agrega el enlace de la prenda</string>

    <!--ITEM DE AGREGAR PRENDA DE VERANO-->
    <string name="NombreImagenVeranoItem"> -- </string>
    <string name="VistaVeranoItem"> -- </string>
    <string name="DescripcionVeranoItem"> -- </string>

    <!--DIALOG ORDENAR-->
    <string name="OrdenarTXT">Ordenar en: </string>
    <string name="Dos_Columnas">2 Columnas</string>
    <string name="Tres_Columnas">3 Columnas</string>

    <!--PERFIL ADMINISTRADOR-->
    <string name="PERFILADMINISTRADORTXT">MI PERFIL</string>
    <string name="MIINFORMACIONTXT">MI INFORMACIÓN</string>
    <string name="UIDPERFILTXT">Uid: </string>
    <string name="UIDPERFIL"> -- </string>
    <string name="NOMBREPERFILTXT">Nombre: </string>
    <string name="NOMBREPERFIL"> -- </string>
    <string name="APELLIDOPERFILTXT">Apellidos: </string>
    <string name="APELLIDOPERFIL"> -- </string>
    <string name="CORREOPERFILTXT">Correo: </string>
    <string name="CORREOPERFIL"> -- </string>
    <string name="EDADPERFILTXT">Edad: </string>
    <string name="EDADPERFIL"> -- </string>
    <string name="PASSWORLDPERFILTXT">Password: </string>
    <string name="PASSWORLDPERFIL"> -- </string>
    <string name="ACTUALIZARPASS">Actualizar Password</string>
    <string name="ACTUALIZARDATOS">Actualizar Datos</string>

    <!--CAMBIO DE CONTRASEÑA-->
    <string name="MisCredencialesTXT">Mis Credenciales</string>
    <string name="PassActualTXT">Contraseña actual: </string>
    <string name="PassActual"> -- </string>
    <string name="ActualPassET">Contraseña Actual</string>
    <string name="NuevoPassET">Nueva Contraseña</string>
    <string name="CAMBIARPASSBTN">CAMBIAR CONTRASEÑA</string>
    <string name="IRINICIOBTN">IR INICIO</string>
    <string name="NOTATXT">Nota: Si cambia la contraseña, se cerrará sesión automáticamente</string>

    <!--NANALAAND-->
    <string name="NombreCategoriaD"> -- </string>

    <!--DETALLES IMAGEN-->
    <string name="NombreImagenTXT">Nombre De Imagen</string>
    <string name="NombreImagenDetalle"> -- </string>
    <string name="VisualizacionTXT">Visualizaciones</string>
    <string name="VistaDetalle"> -- </string>
    <string name="DescripcionImagenTXT">Descripción de la prenda</string>
    <string name="DescripcionImagen"> -- </string>
    <string name="VisualizarEnProbador">Visualizar En Provador Virtual</string>
    <string name="ObtenerPrenda">Obtener Prenda</string>

    <!--DIALOG OBTENER PRENDA-->
    <string name="ObtenerPrendaTXT">ENLACE DE LA PRENDA</string>
    <string name="EnlacePrendaDialog"> -- </string>
    <string name="IrNavegador">Abrir En Navegador</string>
    <string name="CopiarEnlace">Copiar Enlace</string>

    <!--DIALOG VISUALIZAR PRENDA-->
    <string name="ProbandoRetrofit">Probando Retrofit</string>
    <string name="Fact"> -- </string>
    <string name="Length"> -- </string>

    <!--FOTOGRAMETRÍA-->
    <string name="ImagesFL">IMAGENES SELECCIONADAS</string>
    <string name="SiguienteBTN">SIGUIENTE</string>
    <string name="AnteriorBTN">ANTERIOR</string>
    <string name="SeleccionarBTN">SELECCIONAR IMAGENES</string>
    <string name="CrearModelo3D">CREAR MODELO 3D</string>

    <!--DIALOG CREAR MODELO 3D-->
    <string name="ProbandoAutodesk">Realizando Fotogrametría</string>
    <string name="AvanzarBTN"> Avanzar </string>
    <string name="Respuesta"> -- </string>
    <string name="Progress"> -- </string>
    <string name="photosceneLink"> -- </string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>