<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FragmentosAdministrador.ScanAdmin">

    <!--LAS IMAGENES SELECCIONADAS SE MOSTRARÁN AQUÍ-->
    <ImageSwitcher
        android:id="@+id/ImageFLR"
        android:layout_width="match_parent"
        android:layout_height="450dp">

    </ImageSwitcher>

    <Button
        android:id="@+id/AnteriorBTN"
        android:text="@string/AnteriorBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ImageFLR"
        android:textColor="@color/white"
        android:background="@drawable/btn_personalizado_dos">

    </Button>

    <Button
        android:id="@+id/SiguienteBTN"
        android:text="@string/SiguienteBTN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/btn_personalizado_dos"
        android:layout_below="@id/ImageFLR"
        android:layout_alignParentEnd="true">

    </Button>

    <Button
        android:id="@+id/SeleccionarBTN"
        android:text="@string/SeleccionarBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:background="@drawable/btn_personalizado_dos"
        android:layout_above="@id/CrearModelo3D">

    </Button>

    <Button
        android:id="@+id/CrearModelo3D"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="15dp"
        android:background="@drawable/btn_personalizado_dos"
        android:text="@string/CrearModelo3D"
        android:textColor="@color/white">

    </Button>

</RelativeLayout>