<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="300dp"
    android:background="@color/white">

    <TextView
        android:id="@+id/OrdenarTXT"
        android:text="@string/OrdenarTXT"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:gravity="center">

    </TextView>

    <Button
        android:id="@+id/Dos_Columnas"
        android:text="@string/Dos_Columnas"
        android:background="@drawable/btn_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white">

    </Button>

    <Button
        android:id="@+id/Tres_Columnas"
        android:text="@string/Tres_Columnas"
        android:background="@drawable/btn_personalizado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textColor="@color/white">

    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>