<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="10dp"
    android:layout_gravity="center"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@color/white">

    <TextView
        android:id="@+id/ProbandoAutodesk"
        android:text="@string/ProbandoAutodesk"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="#000"
        android:gravity="center">

    </TextView>

    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/Respuesta"
        android:text="@string/Respuesta"
        android:layout_width="275dp"
        android:layout_height="wrap_content"
        android:maxHeight="275dp"
        android:textSize="20sp"
        android:textColor="#000"
        android:gravity="center">

    </TextView>

    <Button
        android:id="@+id/AvanzarBTN"
        android:text="@string/AvanzarBTN"
        android:layout_marginTop="10dp"
        android:textColor="@color/white"
        android:background="@drawable/btn_personalizado_dos"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </Button>

</androidx.appcompat.widget.LinearLayoutCompat>