<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InicioSesion">
    
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="15dp"
        android:background="@color/white">
    
        <TextView
            android:text="@string/LoginTXT"
            android:textColor="#000"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </TextView>

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/carga"
            android:layout_marginTop="15dp">

        </androidx.appcompat.widget.AppCompatImageView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Correo"
                android:hint="@string/Correo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/Password"
                android:hint="@string/Password"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            </EditText>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/Ingresar"
            android:text="@string/Ingresar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:textSize="18dp"
            android:background="#08088A">

        </Button>

    </androidx.appcompat.widget.LinearLayoutCompat>

</RelativeLayout>